# octp

./: .gitignore  readme.md
.github/workflows/: build-and-test-with-lammps-release-branch.yml  build-and-test-with-lammps-release.yml  build-and-test-with-lammps-stable-release.yml  build-lammps-latest-release.yml
src/: compute_position.cpp  compute_position.h  compute_rdf_ext.cpp  compute_rdf_ext.h  fix_ordern.h
tests/: CMakeLists.txt  testoctp.cpp
